# blkhash

./: .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Makefile  README.md  blkhash.3.adoc  blkhash.c  blkhash.h  blkhash.py  blkhash.spec.in  blkhash_bench.c  blkhash_internal.h  blkhash_test.c  blksum.1.adoc  blksum.c  blksum.h  blksum.py  blksum_test.py  block.c  build-rpms  build-srpm  config.c  example.c  file.c  list-digests.c  log.c  meson.build  meson_options.txt  nbd.c  nbdserver.c  parallel.c  pipe.c  probe.c  progress.c  pytest.ini  simple.c  src.c  util.c  util.h  (+4 more)
doc/: blkhash.3.adoc  blksum.1.adoc  example-aio.c  example-async.c  example.c  meson.build
lib/: blkhash-internal.h  blkhash.c  block.c  completion.c  config.c  digest-list.c  digest.c  digest.h  event.c  event.h  hash-pool.c  hash-pool.h  meson.build  stream.c  submission.c  submission.h  threads.h  worker.c  zero.c
man/: blkhash-aio.3.adoc  blkhash-opts.3.adoc  blkhash.3.adoc  blksum.1.adoc  example-aio.c  example.c  meson.build
test/: README.md  bench-b3sum-file.py  bench-b3sum-pipe.py  bench-b3sum.py  bench-blkhash-data.py  bench-blkhash-digest.py  bench-blkhash-hole.py  bench-blkhash-null.py  bench-blkhash-parallel.py  bench-blkhash-zero-optimization.py  bench-blkhash-zero.py  bench-blksum-blake3-file.py  bench-blksum-blake3-nbd.py  bench-blksum-file.py  bench-blksum-nbd.py  bench-blksum-pipe.py  bench-blksum-sha256-file.py  bench-blksum-sha256-nbd.py  bench-data.py  bench-digest.py  bench-hole.py  bench-mmap-blake3.sh  bench-mmap-file.py  bench-mmap-null.sh  bench-null.py  bench-openssl-file.py  bench-openssl-pipe.py  bench-openssl.py  bench-parallel.py  bench-zero-optimization.py  bench-zero.py  bench.py  bench_test.py  benchmark.c  benchmark.h  blkhash-bench.c  blkhash-bench.py  blkhash-test.c  blkhash.py  blkhash_bench.c  (+22 more)
test/results/: async-api.md  dell-poweredge-640.md  macbook-air-m1-2020.md  queue-depth.md  thinkpad-p1-gen-3.md
test/results/2023-05/laptop/: b3sum-data-raw.json  b3sum-hole-raw.json  b3sum-zero-raw.json  blksum-data-qcow2-null.json  blksum-data-qcow2.json  blksum-data-raw-file-null.json  blksum-data-raw-file.json  blksum-data-raw-nbd-null.json  blksum-data-raw-nbd.json  blksum-hole-qcow2-null.json  blksum-hole-qcow2.json  blksum-hole-raw-file-null.json  blksum-hole-raw-file.json  blksum-hole-raw-nbd-null.json  blksum-hole-raw-nbd.json  blksum-zero-qcow2-null.json  blksum-zero-qcow2.json  blksum-zero-raw-file-null.json  blksum-zero-raw-file.json  blksum-zero-raw-nbd-null.json  blksum-zero-raw-nbd.json  data.json  hole.json  null.json  parallel.json  sha256sum-data-raw.json  sha256sum-hole-raw.json  sha256sum-zero-raw.json  zero-optimization.json  zero.json
test/results/2023-05/mbp/: b3sum-data-raw.json  b3sum-hole-raw.json  b3sum-zero-raw.json  blksum-data-raw-file-null.json  blksum-data-raw-file.json  blksum-data-raw-pipe-null.json  blksum-data-raw-pipe.json  blksum-hole-raw-file-null.json  blksum-hole-raw-file.json  blksum-hole-raw-pipe-null.json  blksum-hole-raw-pipe.json  blksum-zero-raw-file-null.json  blksum-zero-raw-file.json  blksum-zero-raw-pipe-null.json  blksum-zero-raw-pipe.json  data.json  hole.json  null.json  openssl-sha256-data-raw.json  openssl-sha256-hole-raw.json  openssl-sha256-zero-raw.json  parallel.json  zero-optimization.json  zero.json
test/results/2023-05/server/: b3sum-data-raw.json  b3sum-hole-raw.json  b3sum-zero-raw.json  blksum-data-qcow2-null.json  blksum-data-qcow2.json  blksum-data-raw-file-null.json  blksum-data-raw-file.json  blksum-data-raw-nbd-null.json  blksum-data-raw-nbd.json  blksum-data-raw-pipe-null.json  blksum-data-raw-pipe.json  blksum-hole-qcow2-null.json  blksum-hole-qcow2.json  blksum-hole-raw-file-null.json  blksum-hole-raw-file.json  blksum-hole-raw-nbd-null.json  blksum-hole-raw-nbd.json  blksum-hole-raw-pipe-null.json  blksum-hole-raw-pipe.json  blksum-zero-qcow2-null.json  blksum-zero-qcow2.json  blksum-zero-raw-file-null.json  blksum-zero-raw-file.json  blksum-zero-raw-nbd-null.json  blksum-zero-raw-nbd.json  blksum-zero-raw-pipe-null.json  blksum-zero-raw-pipe.json  data.json  hole.json  null.json  parallel.json  sha256sum-data-raw.json  sha256sum-hole-raw.json  sha256sum-zero-raw.json  zero-optimization.json  zero.json
test/results/2023-06/server/: blksum-10p-qcow2-nbd.json  blksum-10p-raw-nbd.json  blksum-20p-qcow2-nbd.json  blksum-20p-raw-nbd.json  blksum-40p-qcow2-nbd.json  blksum-40p-raw-nbd.json  blksum-80p-qcow2-nbd.json  blksum-80p-raw-nbd.json
test/results/2023-12/aws-c6id.8xlarge/b3sum/: 20p.json  40p.json  80p.json
test/results/2023-12/aws-c6id.8xlarge/blkhash/: blkhash-digest-r1m-512k-gips.eps  blkhash-digest-r1m-512k.json  blkhash-digest-r256k-128k.json  blkhash-digest-r256k-b64k.json  blkhash-digest-r512k-256k.json  blkhash-parallel-blake3-r1m-512k.json  blkhash-parallel-blake3-r256k-b64k.json  blkhash-zero-optimization-blake3-r1m-b512k-gips.eps  blkhash-zero-optimization-blake3-r1m-b512k.json  blkhash-zero-optimization-blake3-r256k-b64k.json
test/results/2023-12/aws-c6id.8xlarge/blksum-blake3-nbd/: 20p.json  40p.json  80p.json
test/results/2023-12/laptop/: blkhash-data-blake3.json  blkhash-digest.json  blkhash-hole-blake3.json  blkhash-null.json  blkhash-parallel-blake3.json  blkhash-zero-blake3.json  blkhash-zero-optimization.json
test/results/2023-12/server/: b3sum-10p.json  b3sum-20p.json  b3sum-40p.json  b3sum-80p.json  mmap-blake3-10p-aio.json  mmap-blake3-10p.json  mmap-blake3-20p-aio.json  mmap-blake3-20p.json  mmap-blake3-40p-aio.json  mmap-blake3-40p.json  mmap-blake3-80p-aio.json  mmap-blake3-80p.json  mmap-null-10p-aio.json  mmap-null-10p.json  mmap-null-20p-aio.json  mmap-null-20p.json  mmap-null-40p-aio.json  mmap-null-40p.json  mmap-null-80p-aio.json  mmap-null-80p.json
test/results/2024-02/aws-c5.9xlarge/blkhash/: digest-r1m-b512k-gips.eps  digest-r1m-b512k.json  digest-r256k-b128k.json  digest-r256k-b64k.json  digest-r512k-b256k.json  zero-optimization-blake3-r1m-b512k-cpb.eps  zero-optimization-blake3-r1m-b512k-gips.eps  zero-optimization-blake3-r1m-b512k.json  (+9 more)
(+281 files in other folders)
