# SPDX-FileCopyrightText: Red Hat Inc
# SPDX-License-Identifier: LGPL-2.1-or-later

option('nbd', type: 'feature', value: 'auto', description: 'Support NBD URL')
option('blake3', type: 'feature', value: 'auto', description: 'Support blake3 digest')
option('man', type: 'feature', value: 'auto', description: 'Create manual pages')
